# dotfiles

./: .gitignore  Makefile  README  download-list  link-list
afterstep/: max-icon.xpm  mini-icon.xpm  steprc
brew/: Brewfile.m1
composer/: composer.json
cron/: crontab  make.link
dotfiles/: Xresources  bash_aliases  bash_app  bash_env  bash_make_aliases  bash_profile  bashrc  canna  cshrc  cvsrc  dot.Xresources  dot.bash_profile  dot.bashrc  dot.emacs  emacs  emacs-root  emacs_bash  fvwm2rc  fvwm2rc.portable  fvwm2rc95  fvwmrc  guile  indent.pro  login  logout  profile  sh_env  vimrc  xmodmap  xsession  zprofile  zsh_app  zsh_make_aliases  zshrc
emacs/: .gitignore  10lang.el  20bindings.el  20menubar.el  20programs.el  20standard.el  70canna.el  70dired-x.el  70mew.el  70texinfmt.el  70texinfo.el  70w3.el  N70mh-e.el  emacs.el  moi-startup.el  my-compat.el  my-startup.el  package.el  wrap-dotemacs
guile/: .cvsignore
java/: ShowEncoding.java  font.properties.ja
license/: LGPL-2.1.txt
lima/: docker-aarch64.yaml  docker-amd64.yaml
mk/: Makefile.single-sources  Makefile.single-tex  sample.Makefile
multipass/: docker-cloud-config.yaml  docker-direct.yaml  docker-snap.yaml  docker.yaml
perl/: SK_client.pl  SK_server.pl  jcode.pl  web-sync
setup/: bootstrap-macos.sh  setup-atom.sh  setup-macos-common.sh  setup-macos-dev.sh  setup-macos-for-me.sh
shell/: bash_emacs  bash_profile  bash_profile.default.sh  bashrc  (+9 more)
skel/: Makefile.am  autogen.sh  skel.c  skel.cc  skel.el  skel.h  skel.html  skel.pl  skel.pm  skel.py  skel.rb  skel.scm  skel.tex  skel.texi
(+158 files in other folders)
